added pankaj card to the website

--- a/website/index.html
+++ b/website/index.html
@@ -86,13 +86,13 @@
       <div class="card" style="width: 18rem">
         <img
           class="card-img-top"
-          src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d7/D%C3%BClmen%2C_Kirchspiel%2C_Dernekamp%2C_B%C3%A4ume_--_2021_--_9397.jpg/1280px-D%C3%BClmen%2C_Kirchspiel%2C_Dernekamp%2C_B%C3%A4ume_--_2021_--_9397.jpg"
+          src="/website/images/pankaj-profile-pic.jpg"
           alt="Card image cap"
         />
         <div class="card-body">
-          <h5 class="card-title">Your Name</h5>
-          <p class="card-text">Your intro - name,class,about you :)</p>
-          <a href="#" class="btn btn-primary">Link to my resume</a>
+          <h5 class="card-title">Pankaj Gupta</h5>
+          <p class="card-text">I am a passionate Full Stack Developer.</p>
+          <a href="https://thepankajgupta.com" class="btn btn-primary">Link to my Portfolio</a>
         </div>
       </div>
       <div class="card" style="width: 18rem">
