Refactor HTML and CSS structure for improved semantics and accessibility

--- a/website/index.html
+++ b/website/index.html
@@ -1,63 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
 
-    <!-- Bootstrap CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
-      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link rel="stylesheet" href="styles.css" />
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <title>CODECELL,VESIT</title>
-  </head>
-  <body>
-    <h1>CODECELL,VESIT</h1>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+  <link rel="stylesheet" href="styles.css" />
+
+  <title>CODECELL,VESIT</title>
+</head>
+
+<body>
+  <header>
+    <h1 class="text-center my-4">CODECELL, VESIT</h1>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">Navbar</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#"
-              >Home <span class="sr-only">(current)</span></a
-            >
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Link</a>
           </li>
           <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              id="navbarDropdown"
-              role="button"
-              data-toggle="dropdown"
-              aria-haspopup="true"
-              aria-expanded="false"
-            >
-              Dropdown
-            </a>
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">Dropdown</a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="#">Action</a>
               <a class="dropdown-item" href="#">Another action</a>
@@ -70,119 +48,105 @@
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
-          <input
-            class="form-control mr-sm-2"
-            type="search"
-            placeholder="Search"
-            aria-label="Search"
-          />
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
-            Search
-          </button>
+          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" />
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
       </div>
     </nav>
-    <div class="cards-container">
-      <div class="card" style="width: 18rem">
-        <img
-          class="card-img-top"
-          src="/website/images/pankaj-profile-pic.jpg"
-          alt="Card image cap"
-        />
-        <div class="card-body">
-          <h5 class="card-title">Pankaj Gupta</h5>
-          <p class="card-text">I am a passionate Full Stack Developer.</p>
-          <a href="https://thepankajgupta.com" class="btn btn-primary">Link to my Portfolio</a>
-        </div>
-      </div>
-      <div class="card" style="width: 18rem">
-        <img
-          class="card-img-top"
-          src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d7/D%C3%BClmen%2C_Kirchspiel%2C_Dernekamp%2C_B%C3%A4ume_--_2021_--_9397.jpg/1280px-D%C3%BClmen%2C_Kirchspiel%2C_Dernekamp%2C_B%C3%A4ume_--_2021_--_9397.jpg"
-          alt="Card image cap"
-        />
-        <div class="card-body">
-          <h5 class="card-title">Your Name</h5>
-          <p class="card-text">Your intro - name,class,about you :)</p>
-          <a href="#" class="btn btn-primary">Link to my resume</a>
-        </div>
-      </div>
-      <div class="card" style="width: 18rem">
-        <img
-          class="card-img-top"
-          src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d7/D%C3%BClmen%2C_Kirchspiel%2C_Dernekamp%2C_B%C3%A4ume_--_2021_--_9397.jpg/1280px-D%C3%BClmen%2C_Kirchspiel%2C_Dernekamp%2C_B%C3%A4ume_--_2021_--_9397.jpg"
-          alt="Card image cap"
-        />
-        <div class="card-body">
-          <h5 class="card-title">Your Name</h5>
-          <p class="card-text">Your intro - name,class,about you :)</p>
-          <a href="#" class="btn btn-primary">Link to my resume</a>
-        </div>
-      </div>
-      <div class="card" style="width: 18rem">
-        <img
-          class="card-img-top"
-          src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d7/D%C3%BClmen%2C_Kirchspiel%2C_Dernekamp%2C_B%C3%A4ume_--_2021_--_9397.jpg/1280px-D%C3%BClmen%2C_Kirchspiel%2C_Dernekamp%2C_B%C3%A4ume_--_2021_--_9397.jpg"
-          alt="Card image cap"
-        />
-        <div class="card-body">
-          <h5 class="card-title">Your Name</h5>
-          <p class="card-text">Your intro - name,class,about you :)</p>
-          <a href="#" class="btn btn-primary">Link to my resume</a>
-        </div>
-      </div>
-      <div class="card" style="width: 18rem">
-        <img
-          class="card-img-top"
-          src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d7/D%C3%BClmen%2C_Kirchspiel%2C_Dernekamp%2C_B%C3%A4ume_--_2021_--_9397.jpg/1280px-D%C3%BClmen%2C_Kirchspiel%2C_Dernekamp%2C_B%C3%A4ume_--_2021_--_9397.jpg"
-          alt="Card image cap"
-        />
-        <div class="card-body">
-          <h5 class="card-title">Your Name</h5>
-          <p class="card-text">Your intro - name,class,about you :)</p>
-          <a href="#" class="btn btn-primary">Link to my resume</a>
-        </div>
-      </div>
-      <div class="card" style="width: 18rem">
-        <img
-          class="card-img-top"
-          src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d7/D%C3%BClmen%2C_Kirchspiel%2C_Dernekamp%2C_B%C3%A4ume_--_2021_--_9397.jpg/1280px-D%C3%BClmen%2C_Kirchspiel%2C_Dernekamp%2C_B%C3%A4ume_--_2021_--_9397.jpg"
-          alt="Card image cap"
-        />
-        <div class="card-body">
-          <h5 class="card-title">Your Name</h5>
-          <p class="card-text">Your intro - name,class,about you :)</p>
-          <a href="#" class="btn btn-primary">Link to my resume</a>
-        </div>
+  </header>
+  <div class="cards-container">
+    <div class="card" style="width: 18rem">
+      <img class="card-img-top" src="/website/images/pankaj-profile-pic.jpg" alt="Card image cap" />
+      <div class="card-body">
+        <h5 class="card-title">Pankaj Gupta</h5>
+        <p class="card-text">I am a passionate Full Stack Developer.</p>
+        <a href="https://thepankajgupta.com" class="btn btn-primary">Link to my Portfolio</a>
       </div>
     </div>
+    <div class="card" style="width: 18rem">
+      <img class="card-img-top"
+        src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d7/D%C3%BClmen%2C_Kirchspiel%2C_Dernekamp%2C_B%C3%A4ume_--_2021_--_9397.jpg/1280px-D%C3%BClmen%2C_Kirchspiel%2C_Dernekamp%2C_B%C3%A4ume_--_2021_--_9397.jpg"
+        alt="Card image cap" />
+      <div class="card-body">
+        <h5 class="card-title">Your Name</h5>
+        <p class="card-text">Your intro - name,class,about you :)</p>
+        <a href="#" class="btn btn-primary">Link to my resume</a>
+      </div>
+    </div>
+    <div class="card" style="width: 18rem">
+      <img class="card-img-top"
+        src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d7/D%C3%BClmen%2C_Kirchspiel%2C_Dernekamp%2C_B%C3%A4ume_--_2021_--_9397.jpg/1280px-D%C3%BClmen%2C_Kirchspiel%2C_Dernekamp%2C_B%C3%A4ume_--_2021_--_9397.jpg"
+        alt="Card image cap" />
+      <div class="card-body">
+        <h5 class="card-title">Your Name</h5>
+        <p class="card-text">Your intro - name,class,about you :)</p>
+        <a href="#" class="btn btn-primary">Link to my resume</a>
+      </div>
+    </div>
+    <div class="card" style="width: 18rem">
+      <img class="card-img-top"
+        src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d7/D%C3%BClmen%2C_Kirchspiel%2C_Dernekamp%2C_B%C3%A4ume_--_2021_--_9397.jpg/1280px-D%C3%BClmen%2C_Kirchspiel%2C_Dernekamp%2C_B%C3%A4ume_--_2021_--_9397.jpg"
+        alt="Card image cap" />
+      <div class="card-body">
+        <h5 class="card-title">Your Name</h5>
+        <p class="card-text">Your intro - name,class,about you :)</p>
+        <a href="#" class="btn btn-primary">Link to my resume</a>
+      </div>
+    </div>
+    <div class="card" style="width: 18rem">
+      <img class="card-img-top"
+        src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d7/D%C3%BClmen%2C_Kirchspiel%2C_Dernekamp%2C_B%C3%A4ume_--_2021_--_9397.jpg/1280px-D%C3%BClmen%2C_Kirchspiel%2C_Dernekamp%2C_B%C3%A4ume_--_2021_--_9397.jpg"
+        alt="Card image cap" />
+      <div class="card-body">
+        <h5 class="card-title">Your Name</h5>
+        <p class="card-text">Your intro - name,class,about you :)</p>
+        <a href="#" class="btn btn-primary">Link to my resume</a>
+      </div>
+    </div>
+    <div class="card" style="width: 18rem">
+      <img class="card-img-top"
+        src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d7/D%C3%BClmen%2C_Kirchspiel%2C_Dernekamp%2C_B%C3%A4ume_--_2021_--_9397.jpg/1280px-D%C3%BClmen%2C_Kirchspiel%2C_Dernekamp%2C_B%C3%A4ume_--_2021_--_9397.jpg"
+        alt="Card image cap" />
+      <div class="card-body">
+        <h5 class="card-title">Your Name</h5>
+        <p class="card-text">Your intro - name,class,about you :)</p>
+        <a href="#" class="btn btn-primary">Link to my resume</a>
+      </div>
+    </div>
+  </div>
 
-    <div class="info-class">
-      <h1>About Codecell</h1>
-      <p><code style="font-size: 1.2em;">
+  <div class="info-class">
+    <h1>About Codecell</h1>
+    <p><code style="font-size: 1.2em;">
         Welcome to <strong>Codecell VESIT</strong> , where the pursuit of knowledge knows no bounds. Here, we embrace a culture of <strong>continuous learning </strong> and <strong>personal growth </strong>. With a strong emphasis on <strong>coding and technology </strong>, we're not just shaping students we're nurturing the innovators of tomorrow. Join us on this extraordinary journey of discovery and achievement.
       </p>
     </div>
-    <footer>
-      <div class="bottom">
-        <div class="links">
-          <p>links</p>
-            <a href="/home.html">Home</a>
-            <a href="./about.html">About</a>
-            <a href="./ticket.html">Blog</a>
-            <a href="./ticket.html">Contact Us</a>
-        </div>
-        <div class="logos">
-          <p>Contact Us</p>
-          <a href="#" class=" fa fa-brands fa-linkedin fa-2xl"></a>
-          <a href="https://github.com/CMPN-CODECELL/CodingBonanza" class="fa fa-brands fa-github fa-2xl"></a>
-        <a href="#" class=" fa fa-brands fa-x-twitter fa-2xl"></a>
-        </div>
+    <footer class="bg-light text-dark py-4">
+      <div class="container">
+          <div class="row">
+              <div class="col-md-6">
+                  <h5>Links</h5>
+                  <ul class="list-unstyled">
+                      <li><a href="/home.html">Home</a></li>
+                      <li><a href="./about.html">About</a></li>
+                      <li><a href="./ticket.html">Blog</a></li>
+                      <li><a href="./ticket.html">Contact Us</a></li>
+                  </ul>
+              </div>
+              <div class="col-md-6 text-right">
+                  <h5>Contact Us</h5>
+                  <div>
+                      <a href="#" class="fa fa-brands fa-linkedin fa-2xl mx-2"></a>
+                      <a href="https://github.com/CMPN-CODECELL/CodingBonanza" class="fa fa-brands fa-github fa-2xl mx-2"></a>
+                      <a href="#" class="fa fa-brands fa-x-twitter fa-2xl mx-2"></a>
+                  </div>
+              </div>
+          </div>
+          <div class="text-center mt-3">
+              <p>© 2023 All Rights Reserved by VESIT</p>
+          </div>
       </div>
-      <div class="info"><p> © 2023 All Rights Recived By VESIT</p></div>
-  
-  
-    </footer>
+  </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
