Changed background colors for the About section, info class, cards container, and main header, and fixed the image in the card component.

--- a/website/index.html
+++ b/website/index.html
@@ -56,7 +56,7 @@
   </header>
   <div class="cards-container">
     <div class="card" style="width: 18rem">
-      <img class="card-img-top" src="/website/images/pankaj-profile-pic.jpg" alt="Card image cap" />
+      <img class="card-img-top" src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d7/D%C3%BClmen%2C_Kirchspiel%2C_Dernekamp%2C_B%C3%A4ume_--_2021_--_9397.jpg/1280px-D%C3%BClmen%2C_Kirchspiel%2C_Dernekamp%2C_B%C3%A4ume_--_2021_--_9397.jpg" alt="Card image cap" />
       <div class="card-body">
         <h5 class="card-title">Pankaj Gupta</h5>
         <p class="card-text">I am a passionate Full Stack Developer.</p>
@@ -116,7 +116,7 @@
   </div>
 
   <div class="info-class">
-    <h1>About Codecell</h1>
+    <h1 id="about">About Codecell</h1>
     <p><code style="font-size: 1.2em;">
         Welcome to <strong>Codecell VESIT</strong> , where the pursuit of knowledge knows no bounds. Here, we embrace a culture of <strong>continuous learning </strong> and <strong>personal growth </strong>. With a strong emphasis on <strong>coding and technology </strong>, we're not just shaping students we're nurturing the innovators of tomorrow. Join us on this extraordinary journey of discovery and achievement.
       </p>
