--- a/website/index.html
+++ b/website/index.html
@@ -17,7 +17,7 @@
 
 <body>
   <header>
-    <h1 class="text-center my-4">CODECELL, VESIT</h1>
+    <h1 class="text-center my-4 title">CODECELL, VESIT</h1>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">Navbar</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -65,12 +65,12 @@
     </div>
     <div class="card" style="width: 18rem">
       <img class="card-img-top"
-        src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d7/D%C3%BClmen%2C_Kirchspiel%2C_Dernekamp%2C_B%C3%A4ume_--_2021_--_9397.jpg/1280px-D%C3%BClmen%2C_Kirchspiel%2C_Dernekamp%2C_B%C3%A4ume_--_2021_--_9397.jpg"
+        src="./images/Tejas.png"
         alt="Card image cap" />
       <div class="card-body">
-        <h5 class="card-title">Your Name</h5>
-        <p class="card-text">Your intro - name,class,about you :)</p>
-        <a href="#" class="btn btn-primary">Link to my resume</a>
+        <h5 class="card-title">Tejas Gadge</h5>
+        <p class="card-text">A passionate Full Stack Flutter Developer</p>
+        <a href="https://tejasgadge-online.netlify.app" class="btn btn-primary">Link to my resume</a>
       </div>
     </div>
     <div class="card" style="width: 18rem">
