added links to social media icons

--- a/website/index.html
+++ b/website/index.html
@@ -134,11 +134,13 @@
                   </ul>
               </div>
               <div class="col-md-6 text-right">
-                  <h5>Contact Us</h5>
+                  <h5>Connect With Us!</h5>
                   <div>
-                      <a href="#" class="fa fa-brands fa-linkedin fa-2xl mx-2"></a>
+                      <a href="https://www.linkedin.com/company/vesit-tinkers-codecell-computer-department/" class="fa fa-brands fa-linkedin fa-2xl mx-2"></a>
                       <a href="https://github.com/CMPN-CODECELL/CodingBonanza" class="fa fa-brands fa-github fa-2xl mx-2"></a>
                       <a href="#" class="fa fa-brands fa-x-twitter fa-2xl mx-2"></a>
+                      <a href="https://www.instagram.com/codecell_vesit/" class="fa-brands fa-instagram fa-2xl mx-2" style="color: #0b89fe;"></a>
+                      <a href="https://www.youtube.com/@CodeCellVESIT" class="fa-brands fa-youtube fa-2xl mx-2" style="color: #0b89fe;"></a>
                   </div>
               </div>
           </div>
