--- a/website/index.html
+++ b/website/index.html
@@ -56,7 +56,7 @@
   </header>
   <div class="cards-container">
     <div class="card" style="width: 18rem">
-      <img class="card-img-top" src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d7/D%C3%BClmen%2C_Kirchspiel%2C_Dernekamp%2C_B%C3%A4ume_--_2021_--_9397.jpg/1280px-D%C3%BClmen%2C_Kirchspiel%2C_Dernekamp%2C_B%C3%A4ume_--_2021_--_9397.jpg" alt="Card image cap" />
+      <img class="card-img-top" src="./images/pankaj-profile-pic.jpg" alt="Pankaj Gupta Profile pic" />
       <div class="card-body">
         <h5 class="card-title">Pankaj Gupta</h5>
         <p class="card-text">I am a passionate Full Stack Developer.</p>
@@ -139,8 +139,8 @@
                       <a href="https://www.linkedin.com/company/vesit-tinkers-codecell-computer-department/" class="fa fa-brands fa-linkedin fa-2xl mx-2"></a>
                       <a href="https://github.com/CMPN-CODECELL/CodingBonanza" class="fa fa-brands fa-github fa-2xl mx-2"></a>
                       <a href="#" class="fa fa-brands fa-x-twitter fa-2xl mx-2"></a>
-                      <a href="https://www.instagram.com/codecell_vesit/" class="fa-brands fa-instagram fa-2xl mx-2" style="color: #0b89fe;"></a>
-                      <a href="https://www.youtube.com/@CodeCellVESIT" class="fa-brands fa-youtube fa-2xl mx-2" style="color: #0b89fe;"></a>
+                      <a href="https://www.instagram.com/codecell_vesit/" class="fa-brands fa-instagram fa-2xl mx-2"></a>
+                      <a href="https://www.youtube.com/@CodeCellVESIT" class="fa-brands fa-youtube fa-2xl mx-2"></a>
                   </div>
               </div>
           </div>
