Added codecell logo

--- a/website/index.html
+++ b/website/index.html
@@ -17,9 +17,8 @@
 
 <body>
   <header>
-    <h1 class="text-center my-4 title">CODECELL, VESIT</h1>
+    <h1 class="text-center my-4 title"><img class="logo" src="./images/Codecell Logo.png"\> CODECELL, VESIT</h1>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Navbar</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -75,12 +74,12 @@
     </div>
     <div class="card" style="width: 18rem">
       <img class="card-img-top"
-        src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d7/D%C3%BClmen%2C_Kirchspiel%2C_Dernekamp%2C_B%C3%A4ume_--_2021_--_9397.jpg/1280px-D%C3%BClmen%2C_Kirchspiel%2C_Dernekamp%2C_B%C3%A4ume_--_2021_--_9397.jpg"
+        src="images/Ayush-Attarde.png"
         alt="Card image cap" />
       <div class="card-body">
-        <h5 class="card-title">Your Name</h5>
-        <p class="card-text">Your intro - name,class,about you :)</p>
-        <a href="#" class="btn btn-primary">Link to my resume</a>
+        <h5 class="card-title">Ayush Attarde</h5>
+        <p class="card-text">Tech Explorer, specialize in backend Development</p>
+        <a href="https://www.linkedin.com/in/ayush-attarde-3a394130a/" class="btn btn-primary">Link to my LinkedIn</a>
       </div>
     </div>
     <div class="card" style="width: 18rem">
