--- a/website/index.html
+++ b/website/index.html
@@ -17,7 +17,7 @@
 
 <body>
   <header>
-    <h1 class="text-center my-4 title"><img class="logo" src="./images/Codecell Logo.png"\> CODECELL, VESIT</h1>
+    <h1 class="title"><img class="logo" src="./images/Codecell Logo.png"\> CODECELL, VESIT</h1>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,10 +27,13 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="./index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="./about.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./contact.html">Contact Us</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
@@ -41,9 +44,6 @@
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="#">Something else here</a>
             </div>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#">Disabled</a>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
@@ -126,10 +126,10 @@
               <div class="col-md-6">
                   <h5>Links</h5>
                   <ul class="list-unstyled">
-                      <li><a href="/home.html">Home</a></li>
+                      <li><a href="./index.html">Home</a></li>
                       <li><a href="./about.html">About</a></li>
                       <li><a href="./ticket.html">Blog</a></li>
-                      <li><a href="./ticket.html">Contact Us</a></li>
+                      <li><a href="./contact.html">Contact Us</a></li>
                   </ul>
               </div>
               <div class="col-md-6 text-right">
