make changes in the about page

--- a/website/about.html
+++ b/website/about.html
@@ -81,81 +81,89 @@
     </header>
     <div class="about-section">
       <h1 class="about_heading">About Us</h1>
-      <p>
+      <p class="intro">
         Welcome to <strong>CodeCell VESIT</strong>, where the pursuit of
         knowledge knows no bounds. We are the beating heart of technology and
         innovation at our college, fostering a community of passionate coders,
         tech enthusiasts, and future innovators.
       </p>
+      <div class="intro">
+        <h2 class="about_heading">Our Mission</h2>
 
-      <h2 class="about_heading">Our Mission</h2>
+        <p>
+          At CodeCell, we believe in the power of technology to shape the
+          future. Our mission is to:
+        </p>
 
-      <p>
-        At CodeCell, we believe in the power of technology to shape the future.
-        Our mission is to:
-      </p>
-      <ul>
-        <li>
-          Cultivate a <strong>culture of continuous learning</strong> and
-          <strong>personal growth</strong>
-        </li>
-        <li>
-          Provide a platform for students to explore and excel in
-          <strong>coding and technology</strong>
-        </li>
-        <li>
-          Bridge the gap between academic knowledge and industry requirements
-        </li>
-        <li>
-          Nurture the innovators of tomorrow through hands-on experience and
-          mentorship
-        </li>
-      </ul>
+        <ul>
+          <li>
+            Cultivate a <strong>culture of continuous learning</strong> and
+            <strong>personal growth</strong>
+          </li>
+          <li>
+            Provide a platform for students to explore and excel in
+            <strong>coding and technology</strong>
+          </li>
+          <li>
+            Bridge the gap between academic knowledge and industry requirements
+          </li>
+          <li>
+            Nurture the innovators of tomorrow through hands-on experience and
+            mentorship
+          </li>
+        </ul>
+      </div>
 
-      <h2 class="about_heading">What We Do</h2>
+      <div class="intro">
+        <h2 class="about_heading">What We Do</h2>
 
-      <h3>Events and Workshops</h3>
-      <p>
-        We organize a variety of events throughout the academic year, including:
-      </p>
-      <ul>
-        <li>Coding competitions and hackathons</li>
-        <li>Tech talks by industry experts</li>
-        <li>Hands-on workshops on cutting-edge technologies</li>
-        <li>Project showcases and demo days</li>
-      </ul>
+        <h3>Events and Workshops</h3>
+        <p>
+          We organize a variety of events throughout the academic year,
+          including:
+        </p>
+        <ul>
+          <li>Coding competitions and hackathons</li>
+          <li>Tech talks by industry experts</li>
+          <li>Hands-on workshops on cutting-edge technologies</li>
+          <li>Project showcases and demo days</li>
+        </ul>
 
-      <h3>Skill Development</h3>
-      <p>Our focus areas include, but are not limited to:</p>
-      <ul>
-        <li>Web and mobile app development</li>
-        <li>Artificial Intelligence and Machine Learning</li>
-        <li>Cybersecurity</li>
-        <li>Cloud computing</li>
-        <li>Data Science and Analytics</li>
-      </ul>
+        <h3>Skill Development</h3>
+        <p>Our focus areas include, but are not limited to:</p>
+        <ul>
+          <li>Web and mobile app development</li>
+          <li>Artificial Intelligence and Machine Learning</li>
+          <li>Cybersecurity</li>
+          <li>Cloud computing</li>
+          <li>Data Science and Analytics</li>
+        </ul>
 
-      <h3>Community Building</h3>
-      <p>We believe in the power of collaboration. CodeCell provides:</p>
-      <ul>
-        <li>A supportive network of like-minded individuals</li>
-        <li>Opportunities for team projects and peer learning</li>
-        <li>Mentorship programs connecting juniors with experienced seniors</li>
-      </ul>
+        <h3>Community Building</h3>
+        <p>We believe in the power of collaboration. CodeCell provides:</p>
+        <ul>
+          <li>A supportive network of like-minded individuals</li>
+          <li>Opportunities for team projects and peer learning</li>
+          <li>
+            Mentorship programs connecting juniors with experienced seniors
+          </li>
+        </ul>
+      </div>
+      <div class="intro">
+        <h2 class="about_heading">Join Us!</h2>
 
-      <h2 class="about_heading">Join Us!</h2>
+        <p>
+          Whether you're a coding novice or a tech wizard, CodeCell VESIT
+          welcomes you. Join us on this extraordinary journey of discovery and
+          achievement. Together, we'll push the boundaries of what's possible in
+          the world of technology.
+        </p>
 
-      <p>
-        Whether you're a coding novice or a tech wizard, CodeCell VESIT welcomes
-        you. Join us on this extraordinary journey of discovery and achievement.
-        Together, we'll push the boundaries of what's possible in the world of
-        technology.
-      </p>
-
-      <p>
-        Are you ready to code your future? Connect with us today and be part of
-        the CodeCell family!
-      </p>
+        <p>
+          Are you ready to code your future? Connect with us today and be part
+          of the CodeCell family!
+        </p>
+      </div>
     </div>
     <div class="text-center mt-3">
       <p>© 2023 All Rights Reserved by VESIT</p>
