--- a/website/index.html
+++ b/website/index.html
@@ -103,66 +103,59 @@
         <a href="#" class="btn btn-primary">Link to my resume</a>
       </div>
     </div>
-    <div class="card" style="width: 18rem">
-      <img class="card-img-top"
-        src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d7/D%C3%BClmen%2C_Kirchspiel%2C_Dernekamp%2C_B%C3%A4ume_--_2021_--_9397.jpg/1280px-D%C3%BClmen%2C_Kirchspiel%2C_Dernekamp%2C_B%C3%A4ume_--_2021_--_9397.jpg"
-        alt="Card image cap" />
-      <div class="card-body">
-        <h5 class="card-title">Your Name</h5>
-        <p class="card-text">Your intro - name,class,about you :)</p>
-        <a href="#" class="btn btn-primary">Link to my resume</a>
+  </div>
+
+  <div class="container my-5">
+    <div class="row align-items-center">
+      <div class="col-md-8">
+        <h1>About Codecell</h1>
+        <p>
+          <code style="font-size: 1.2em;">
+            Welcome to <strong>Codecell VESIT</strong>, where the pursuit of knowledge knows no bounds. Here, we embrace
+            a culture of <strong>continuous learning</strong> and <strong>personal growth</strong>. With a strong
+            emphasis on <strong>coding and technology</strong>, we're not just shaping students; we're nurturing the
+            innovators of tomorrow. Join us on this extraordinary journey of discovery and achievement.
+          </code>
+        </p>
+      </div>
+      <div class="col-md-4 text-right">
+        <img src="images/cc.png" alt="Codecell Logo" class="img-fluid" />
       </div>
     </div>
   </div>
 
-  <div class="info-class">
-    <h1>About Codecell</h1>
-    <p><code style="font-size: 1.2em;">
-        Welcome to <strong>Codecell VESIT</strong> , where the pursuit of knowledge knows no bounds. Here, we embrace a culture of <strong>continuous learning </strong> and <strong>personal growth </strong>. With a strong emphasis on <strong>coding and technology </strong>, we're not just shaping students we're nurturing the innovators of tomorrow. Join us on this extraordinary journey of discovery and achievement.
-      </p>
-    </div>
-    <footer class="bg-light text-dark py-4">
-      <div class="container">
-          <div class="row">
-              <div class="col-md-6">
-                  <h5>Links</h5>
-                  <ul class="list-unstyled">
-                      <li><a href="/home.html">Home</a></li>
-                      <li><a href="./about.html">About</a></li>
-                      <li><a href="./ticket.html">Blog</a></li>
-                      <li><a href="./ticket.html">Contact Us</a></li>
-                  </ul>
-              </div>
-              <div class="col-md-6 text-right">
-                  <h5>Contact Us</h5>
-                  <div>
-                      <a href="#" class="fa fa-brands fa-linkedin fa-2xl mx-2"></a>
-                      <a href="https://github.com/CMPN-CODECELL/CodingBonanza" class="fa fa-brands fa-github fa-2xl mx-2"></a>
-                      <a href="#" class="fa fa-brands fa-x-twitter fa-2xl mx-2"></a>
-                  </div>
-              </div>
+  <footer class="bg-light text-dark py-4">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <h5>Links</h5>
+          <ul class="list-unstyled">
+            <li><a href="/home.html">Home</a></li>
+            <li><a href="./about.html">About</a></li>
+            <li><a href="./ticket.html">Blog</a></li>
+            <li><a href="./ticket.html">Contact Us</a></li>
+          </ul>
+        </div>
+        <div class="col-md-6 text-right">
+          <h5>Contact Us</h5>
+          <div>
+            <a href="#" class="fa fa-brands fa-linkedin fa-2xl mx-2"></a>
+            <a href="#" class="fa fa-brands fa-instagram fa-2xl mx-2"></a>
+            <a href="#" class="fa fa-brands fa-github fa-2xl mx-2"></a>
           </div>
-          <div class="text-center mt-3">
-              <p>© 2023 All Rights Reserved by VESIT</p>
-          </div>
+        </div>
       </div>
+      <div class="text-center my-4">© 2023 Codecell, VESIT</div>
+    </div>
   </footer>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"
-      integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"
-      integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+
+  <!-- Optional JavaScript -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl5/6/eW0CGZxFfA7Z9PQAZl6m7/qg6eJ8+e9v8UGP" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-7O8N3z0cRUhN1LynJ4S1hV5jfs3oZk5r+5n0fV1TkK42I2DZ5z0Fg3wX1FQt9z9p" crossorigin="anonymous">
+  </script>
+</body>
+
 </html>
